--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,8 @@ javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${file.reference.gson-2.8.2.jar}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
